# exptrack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  cli.py  config.py  core.py  github_sync.py  notebook.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: CODEBASE_EVALUATION.md  cli-reference.md  configuration.md  contributing.md  faq.md  how-it-works.md  monkey-patching.md  plugins.md  python-api.md  session-trees.md  troubleshooting.md
examples/: README.md  basic_script.py  manual_tracking.py  notebook_example.py  pipeline_example.sh  pipeline_multistep.sh  pipeline_wrapper.sh  resnet_exptrack_run.py  resnet_python_api.py  resume_training.py  shell_script_example.sh  slurm_job.sh
exptrack/: __init__.py  __main__.py  cli.py  config.py  core.py  notebook.py
exptrack/capture/: __init__.py  argparse_patch.py  cell_lineage.py  matplotlib_patch.py  notebook_hooks.py  script_tracking.py  session_hooks.py  variables.py
exptrack/cli/: __init__.py  admin_cmds.py  formatting.py  inspect_cmds.py  main.py  mutate_cmds.py  pipeline_cmds.py  session_cmds.py
exptrack/core/: __init__.py  artifact_protection.py  db.py  experiment.py  git.py  gpu.py  hashing.py  naming.py  queries.py
exptrack/dashboard/: app.py  handler.py  static.py
exptrack/dashboard/js/: __init__.py
exptrack/dashboard/routes/: __init__.py  read_routes.py  write_routes.py
exptrack/dashboard/static_parts/: __init__.py  html.py  scripts.py  styles.py
exptrack/dashboard/static_parts/css/: __init__.py  cards.py  charts.py  code.py  compare.py  components.py  detail.py  images.py  layout.py  reset.py  sessions.py  studies.py  table.py  timeline.py  toolbox.py
exptrack/dashboard/static_parts/js/: __init__.py  charts.py  commands.py  compare.py  confusion.py  core.py  detail.py  experiments.py  image_compare.py  init.py  inline_edit.py  manual.py  mutations.py  owl.py  sessions.py  sidebar.py  stage.py  studies.py  table.py  timeline.py  todos.py
exptrack/plugins/: __init__.py  github_sync.py
exptrack/sessions/: __init__.py  manager.py  tree.py
tests/: conftest.py  run_all.py  test_artifact_protection.py  test_capture_argparse.py  test_capture_matplotlib.py  test_cell_lineage.py  test_cli.py  test_compact.py  test_config.py  test_dashboard_api.py  test_db.py  test_experiment.py  test_image_compare.py  test_image_rendering.py  test_integration.py  test_naming.py  test_new_features.py  test_notebook_hooks.py  test_pipeline_shell.py  test_plugins.py  test_queries.py  test_session_trees.py  test_toolbox_api.py  test_variables.py
