[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "exptrack"
version = "2.0.0"
description = "Local-first ML experiment tracker — zero friction, zero cloud"
requires-python = ">=3.9"

[project.scripts]
exptrack = "exptrack.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["exptrack*"]
