[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "exptrack"
version = "2.0.0"
description = "Local-first ML experiment tracker — zero friction, zero cloud"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
keywords = ["ml", "experiment-tracking", "machine-learning", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mikylab/expTrack"
Repository = "https://github.com/mikylab/expTrack"
Issues = "https://github.com/mikylab/expTrack/issues"

[project.scripts]
exptrack = "exptrack.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["exptrack*"]
