[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "exptrack"
version = "1.7.4"
description = "Local-first ML experiment tracker — zero friction, zero cloud"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Mikyla Bowen", email = "mikyla.bowen@colostate.edu"}]
readme = "README.md"
keywords = ["ml", "experiment-tracking", "machine-learning", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mikylab/exptrack"
Repository = "https://github.com/mikylab/exptrack"
Issues = "https://github.com/mikylab/exptrack/issues"

[project.scripts]
exptrack = "exptrack.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (colon) - project style
    "E702",   # multiple statements on one line (semicolon) - project style
    "E741",   # ambiguous variable name
    "UP007",  # use X | Y for union types (needs 3.10+)
    "SIM105", # use contextlib.suppress - project prefers explicit try/except
    "SIM108", # use ternary operator (readability preference)
    "B905",   # zip without strict= (needs 3.10+)
    "RUF012", # mutable class attributes (false positives on class-level constants)
    "SIM115", # open without context manager (intentional in __main__.py)
    "RUF001", # ambiguous unicode (intentional × character in UI)
]

[tool.ruff.lint.isort]
known-first-party = ["exptrack"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["."]
include = ["exptrack*"]
